--- a/legalService.html
+++ b/legalService.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>Legal Service</title>
 </head>
 <body>
@@ -36,6 +36,7 @@
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
+      <button class="nav-toggle" aria-label="Open navigation" aria-expanded="false"><i class="fa fa-bars"></i></button>
     </div>
   </header>
 
@@ -48,6 +49,8 @@
         <h5 class="sub-heading">LEGAL SERVICES FOR CANADIAN EXPATS</h5>
         <h2 class="main-heading">Expert Legal Support for Canadian Expats</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline image (hidden on desktop) -->
+        <img src="images/canadian.webp" alt="Expert legal services" class="mobile-inline-hero">
         <p>
           KCTT provides comprehensive legal services tailored specifically for Canadian expatriates, 
           ensuring compliance with Canadian and international laws while protecting your interests 
@@ -183,6 +186,8 @@
         <h5 class="sub-heading">LET US HELP YOU</h5>
         <h2 class="main-heading">To know more about our Canadian expat services, please schedule a consultation with us.</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline image (hidden on desktop) -->
+        <img src="images/whand.jpg" alt="Consultation support" class="mobile-inline-hero">
         <p>
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
@@ -242,7 +247,7 @@
 
   <!-- Footer Bottom -->
   <div class="footer-bottom">
-    Developed by ROI
+    © 2025 All Rights Reserved | Developed by ROI
   </div>
 </footer>
    
@@ -321,15 +326,33 @@ body { font-family: "Times New Roman", serif; }
   color: #333;
   position: relative;
 }
-.main-nav a.active::after {
-  content: "";
-  position: absolute;
-  bottom: -4px;
-  left: 0; right: 0;
-  height: 2px;
-  background: #e8534a;
-  margin: auto;
-  width: 100%;
+.main-nav a.active { color:#e00000; font-weight:600; }
+.main-nav a.active::after { content:none !important; }
+
+/* Mobile nav styles */
+.nav-toggle { display:none; background:none; border:none; font-size:2rem; cursor:pointer; }
+@media (max-width:768px){
+  .nav-toggle { display:block; color:#222; }
+  .main-nav ul{ display:none; flex-direction:column; background:#fff; position:absolute; top:60px; right:10px; width:78%; max-width:320px; border:1px solid #e5e7eb; border-radius:10px; box-shadow:0 10px 28px -4px rgba(0,0,0,0.18),0 4px 12px -2px rgba(0,0,0,0.08); padding:8px 0; z-index:999; }
+  .main-nav.active ul{ display:flex; }
+  .main-nav ul li{ width:100%; padding:10px 18px; }
+  .main-nav ul li + li{ border-top:1px solid #f1f2f4; }
+  .main-nav ul li a{ display:block; width:100%; font-size:0.9rem; color:#222; }
+}
+
+/* Inline hero hidden by default (shown on mobile) */
+.mobile-inline-hero { display:none; width:100%; border-radius:10px; margin:12px 0 14px; }
+
+/* Mobile layout for legal-pr (image below red line) */
+@media (max-width:768px){
+  .legal-pr-container { flex-direction:column; flex-wrap:nowrap; align-items:center; gap:28px; }
+  .legal-pr-left { width:100%; display:block; }
+  .legal-pr-right { display:none !important; }
+  .vertical-line { display:none; }
+  .legal-pr .main-heading { font-size:1.35rem; line-height:1.3; }
+  .btn-apply { font-size:0.75rem; }
+  .mobile-inline-hero { display:block; }
+
 }
 
 
@@ -614,6 +637,32 @@ body {
   text-align: justify;  
 }
 
+/* Mobile adjustments: advisory-section service cards 2 per row with reduced typography */
+@media (max-width:768px){
+  .advisory-section .services { display:grid; grid-template-columns:repeat(2,1fr); gap:18px; }
+  .advisory-section .service-card { padding:14px; }
+  .advisory-section .service-card h3 { font-size:14px; margin-bottom:8px; font-weight: bold; }
+  .advisory-section .service-card p { font-size:11px; line-height:1.35; }
+  .advisory-section .service-card img { height:120px; }
+  .advisory-section .learn-more { font-size:12px; margin-top:12px; }
+}
+
 
 
 </style>
+<!-- Font Awesome (for hamburger) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!-- JS for mobile nav toggle -->
+<script>
+document.addEventListener('DOMContentLoaded', function(){
+  const toggle = document.querySelector('.nav-toggle');
+  const nav = document.querySelector('.main-nav');
+  if(toggle && nav){
+    toggle.addEventListener('click', ()=>{
+      nav.classList.toggle('active');
+      const expanded = toggle.getAttribute('aria-expanded') === 'true';
+      toggle.setAttribute('aria-expanded', (!expanded).toString());
+    });
+  }
+});
+</script>
