--- a/otherService.html
+++ b/otherService.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>Other Service</title>
 </head>
 <body>
@@ -36,6 +36,7 @@
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
+      <button class="nav-toggle" aria-label="Open navigation" aria-expanded="false"><i class="fa fa-bars"></i></button>
     </div>
   </header>
 
@@ -52,6 +53,8 @@
           KCTT provides comprehensive immigration, business, and investment services worldwide,
           ensuring seamless access to global opportunities with expert guidance.
         </p>
+        <!-- Mobile inline image (hidden on desktop) -->
+        <img src="images/invest.webp" alt="Global investment services" class="mobile-inline-hero">
         <p>
           From visa applications to citizenship programs, our expert team ensures you navigate 
           complex international processes with confidence and achieve your global mobility goals.
@@ -160,6 +163,8 @@
         <p>
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
+        <!-- Mobile inline image (hidden on desktop) -->
+        <img src="images/whand.jpg" alt="Consultation support" class="mobile-inline-hero">
         <a href="contact.html" class="btn-apply">
           SCHEDULE A CONSULTATION <i class="fa-solid fa-arrow-right"></i>
         </a>
@@ -216,7 +221,7 @@
 
   <!-- Footer Bottom -->
   <div class="footer-bottom">
-    Developed by ROI
+    © 2025 All Rights Reserved | Developed by ROI
   </div>
 </footer>
    
@@ -295,16 +300,36 @@ body { font-family: "Times New Roman", serif; }
   color: #333;
   position: relative;
 }
-.main-nav a.active::after {
-  content: "";
-  position: absolute;
-  bottom: -4px;
-  left: 0; right: 0;
-  height: 2px;
-  background: #e8534a;
-  margin: auto;
-  width: 100%;
+.main-nav a.active { color:#e00000; font-weight:600; }
+.main-nav a.active::after { content:none !important; }
+
+/* Mobile nav styles */
+.nav-toggle { display:none; background:none; border:none; font-size:2rem; cursor:pointer; }
+@media (max-width:768px){
+  .nav-toggle { display:block; color:#222; }
+  .main-nav ul{ display:none; flex-direction:column; background:#fff; position:absolute; top:60px; right:10px; width:78%; max-width:320px; border:1px solid #e5e7eb; border-radius:10px; box-shadow:0 10px 28px -4px rgba(0,0,0,0.18),0 4px 12px -2px rgba(0,0,0,0.08); padding:8px 0; z-index:999; }
+  .main-nav.active ul{ display:flex; }
+  .main-nav ul li{ width:100%; padding:10px 18px; }
+  .main-nav ul li + li{ border-top:1px solid #f1f2f4; }
+  .main-nav ul li a{ display:block; width:100%; font-size:0.9rem; color:#222; }
 }
+
+/* Inline hero hidden by default (shown on mobile) */
+.mobile-inline-hero { display:none; width:100%; border-radius:10px; margin:12px 0 14px; }
+
+/* Mobile layout for legal-pr similar to canada-pr pattern */
+@media (max-width:768px){
+  .legal-pr-container { flex-direction:column; flex-wrap:nowrap; align-items:center; gap:28px; }
+  .legal-pr-left { width:100%; display:block; }
+  /* Hide side image column entirely; we use inline image below red line */
+  .legal-pr-right { display:none !important; }
+  .vertical-line { display:none; }
+  .legal-pr .main-heading { font-size:1.35rem; line-height:1.3; }
+  .btn-apply { font-size:0.75rem; }
+  /* Show inline hero image for all legal-pr sections */
+  .mobile-inline-hero { display:block; }
+}
+
 
 
 .legal-pr {
@@ -488,6 +513,17 @@ body { font-family: "Times New Roman", serif; }
   grid-column: 2; /* place it in the middle column */
 }
 
+/* Mobile: show 2 cards per row in advisory-section */
+@media (max-width:768px){
+  .advisory-section .services { grid-template-columns: repeat(2, 1fr); }
+  /* Override special centering rule for 3-col layout */
+  .advisory-section .services .service-card:last-child:nth-child(3n+1){ grid-column:auto; }
+  /* Smaller paragraph text for tighter 2-column layout */
+  .advisory-section .services .service-card p { font-size:11px; line-height:1.3; }
+  .advisory-section .services .service-card  h3{ font-size:15px; line-height:1.3; }
+
+}
+
 
 .footer {
   background: url("images/footer.jpg") center/cover no-repeat;
@@ -575,3 +611,17 @@ body { font-family: "Times New Roman", serif; }
 
 
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<script>
+document.addEventListener('DOMContentLoaded', function(){
+  const toggle = document.querySelector('.nav-toggle');
+  const nav = document.querySelector('.main-nav');
+  if(toggle && nav){
+    toggle.addEventListener('click', ()=>{
+      nav.classList.toggle('active');
+      const expanded = toggle.getAttribute('aria-expanded') === 'true';
+      toggle.setAttribute('aria-expanded', (!expanded).toString());
+    });
+  }
+});
+</script>
