--- a/Residency Investment/greece.html
+++ b/Residency Investment/greece.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greece</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <title>Greece Residency By Investment</title>
+  <link rel="stylesheet" href="../styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="../script.js" defer></script>
 
 </head>
 <body>
@@ -23,21 +26,22 @@
   <!-- Header with Logo and Menu -->
   <header class="main-header">
     <div class="header-inner">
-      <a href="#" class="logo-link">
+      <a href="../index.html" class="logo-link">
         <img src="../images/logo.jpeg" alt="Company logo" class="logo-img">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav" aria-label="Main navigation">
         <ul id="navList">
-          <li><a href="/index.html" >Home</a></li>
-          <li><a href="/citizenship.html" >Citizenship By Investment</a></li>
-          <li><a href="/residencyInvestment.html" class="active">Residency By Investment</a></li>
-          <li><a href="/canadaResidency.html">Canada Permanent Residency</a></li>
-          <li><a href="/legalService.html" >Legal Services For Canadian Expats</a></li>
-          <li><a href="/realEstate.html" >Real Estate Investment Advisory Services</a></li>
-          <li><a href="/otherService.html">Other Services</a></li>
-          <li><a href="/contact.html">Contact Us</a></li>
+          <li><a href="../index.html" data-index="0">Home</a></li>
+          <li><a href="../citizenship.html" data-index="1">Citizenship By Investment</a></li>
+          <li><a href="../residencyInvestment.html" data-index="2" class="active">Residency By Investment</a></li>
+          <li><a href="../canadaResidency.html" data-index="3">Canada Permanent Residency</a></li>
+          <li><a href="../legalService.html" data-index="4">Legal Services For Canadian Expats</a></li>
+          <li><a href="../realEstate.html" data-index="5">Real Estate Investment Advisory Services</a></li>
+          <li><a href="../otherService.html" data-index="6">Other Services</a></li>
+          <li><a href="../contact.html" data-index="7">Contact Us</a></li>
         </ul>
       </nav>
+      <button class="nav-toggle" aria-label="Open navigation" aria-expanded="false"><i class="fa fa-bars"></i></button>
     </div>
   </header>
 
@@ -49,6 +53,8 @@
       <div class="content">
         <h2 class="main-heading">Greece Residency By Investment</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline hero image (hidden on desktop) -->
+        <img src="/images/greeceNature.webp" alt="Greece landscape" class="mobile-inline-hero">
         <p>
           Greece offers a highly sought-after Residency by Investment Program, allowing investors 
           to secure permanent residency through real estate investments. The program features 
@@ -437,6 +443,8 @@
         <h5 class="sub-heading">LET US HELP YOU</h5>
         <h2 class="main-heading">To know more about Greece residency by investment services, please schedule a consultation with us.</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline hero image (hidden on desktop) -->
+        <img src="/images/consultant.jpg" alt="Consultation" class="mobile-inline-hero second-inline-hero">
         <p>
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
@@ -496,7 +504,7 @@
 
   <!-- Footer Bottom -->
   <div class="footer-bottom">
-    Developed by ROI
+    © 2025 All Rights Reserved | Developed by ROI
   </div>
 </footer>
    
@@ -550,8 +558,10 @@ body { font-family: "Times New Roman", serif; }
 .main-header {
   background: #fff;
   border-bottom: 1px solid #ddd;
-  position: sticky;   
+  position: fixed;   /* fixed to work with top-bar offset script */
   top: 0;            
+  left: 0;
+  right: 0;
   z-index: 1000;     
 }
 
@@ -566,9 +576,10 @@ body { font-family: "Times New Roman", serif; }
 .logo-img { height: 50px; }
 .main-nav ul {
   list-style: none;
-  display: flex;
   gap: 20px;
 }
+@media (min-width: 769px) { .main-nav ul { display:flex; } }
+@media (max-width: 768px) { .main-nav ul { display:none; } .main-nav.active ul { display:flex; flex-direction:column; } }
 .main-nav a {
   font-size: 14px; /* reduced */
   text-decoration: none;
@@ -584,6 +595,17 @@ body { font-family: "Times New Roman", serif; }
   background: #e8534a;
   margin: auto;
   width: 100%;
+}
+@media (max-width: 768px) { .main-nav a.active::after { display:none; } }
+
+/* Minimal mobile overrides rely on global styles */
+@media (max-width: 768px) {
+  .header-inner { position: relative; }
+  .nav-toggle { display: inline-flex; align-items: center; justify-content: center; background: transparent; border: none; font-size: 30px; color: #333; cursor: pointer; z-index: 1200; padding:4px 6px; }
+}
+
+@media (min-width: 769px) {
+  .nav-toggle { display: none; }
 }
 
 
@@ -773,6 +795,16 @@ p {
   margin-top: 0;
   text-align: justify;
   font-weight: normal;
+}
+
+/* Mobile layout adjustments for Residency Planning */
+@media (max-width: 768px) {
+  .residency-planning .container { width: 90%; }
+  .residency-planning h1 { text-align: center; margin-bottom: 22px; }
+  .residency-items { flex-direction: column; gap: 28px; }
+  .residency-item { text-align: left; }
+  .residency-item h2 { text-align: left; font-size: 1.25rem; }
+  .residency-item ul li { line-height: 1.3; }
 }
 
 
@@ -987,6 +1019,21 @@ p {
 .footer ul li {
   margin-bottom: 8px;
   text-align: justify;  
+}
+
+/* Mobile inline hero pattern */
+.mobile-inline-hero {
+  display: none;
+  width: 100%;
+  height: auto;
+  border-radius: 6px;
+  margin: 15px 0 10px;
+}
+
+@media (max-width: 768px) {
+  .real-pr-right { display: none !important; }
+  .mobile-inline-hero { display: block; }
+  .real-pr-right1 { display: none !important; }
 }
 
 </style>
