--- a/Residency Investment/portugal.html
+++ b/Residency Investment/portugal.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portugal</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <title>Portugal Residency By Investment</title>
+  <link rel="stylesheet" href="../styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="../script.js" defer></script>
 
 </head>
 <body>
@@ -20,24 +23,25 @@
     </div>
   </div>
 
-  <!-- Header with Logo and Menu -->
+  <!-- Header with Logo and Menu (standardized) -->
   <header class="main-header">
     <div class="header-inner">
-      <a href="#" class="logo-link">
+      <a href="../index.html" class="logo-link">
         <img src="../images/logo.jpeg" alt="Company logo" class="logo-img">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav" aria-label="Main navigation">
         <ul id="navList">
-          <li><a href="/index.html" >Home</a></li>
-          <li><a href="/citizenship.html" >Citizenship By Investment</a></li>
-          <li><a href="/residencyInvestment.html" class="active">Residency By Investment</a></li>
-          <li><a href="/canadaResidency.html">Canada Permanent Residency</a></li>
-          <li><a href="/legalService.html" >Legal Services For Canadian Expats</a></li>
-          <li><a href="/realEstate.html" >Real Estate Investment Advisory Services</a></li>
-          <li><a href="/otherService.html">Other Services</a></li>
-          <li><a href="/contact.html">Contact Us</a></li>
+          <li><a href="../index.html" data-index="0">Home</a></li>
+          <li><a href="../citizenship.html" data-index="1">Citizenship By Investment</a></li>
+          <li><a href="../residencyInvestment.html" data-index="2" class="active">Residency By Investment</a></li>
+          <li><a href="../canadaResidency.html" data-index="3">Canada Permanent Residency</a></li>
+          <li><a href="../legalService.html" data-index="4">Legal Services For Canadian Expats</a></li>
+          <li><a href="../realEstate.html" data-index="5">Real Estate Investment Advisory Services</a></li>
+          <li><a href="../otherService.html" data-index="6">Other Services</a></li>
+          <li><a href="../contact.html" data-index="7">Contact Us</a></li>
         </ul>
       </nav>
+      <button class="nav-toggle" aria-label="Open navigation" aria-expanded="false"><i class="fa fa-bars"></i></button>
     </div>
   </header>
 
@@ -49,6 +53,8 @@
       <div class="content">
         <h2 class="main-heading">Portugal Residency By Investment</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline hero image (hidden on desktop) -->
+        <img src="/images/portugalNature.webp" alt="Portugal landscape" class="mobile-inline-hero">
         <p>
           The Portugal Golden Visa program offers investors a pathway to European residency and 
           citizenship through diverse investment options. Starting from EUR 200,000 in cultural 
@@ -515,6 +521,8 @@
         <h5 class="sub-heading">LET US HELP YOU</h5>
         <h2 class="main-heading">To know more about Portugal residency by investment services, please schedule a consultation with us.</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline hero image (hidden on desktop) -->
+        <img src="/images/consultant.jpg" alt="Consultation" class="mobile-inline-hero second-inline-hero">
         <p>
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
@@ -574,7 +582,7 @@
 
   <!-- Footer Bottom -->
   <div class="footer-bottom">
-    Developed by ROI
+    © 2025 All Rights Reserved | Developed by ROI
   </div>
 </footer>
    
@@ -628,10 +636,14 @@ body { font-family: "Times New Roman", serif; }
 .main-header {
   background: #fff;
   border-bottom: 1px solid #ddd;
-  position: sticky;   
+  position: fixed;   /* fixed to combine with top-bar for consistent offset */
   top: 0;            
+  left: 0;
+  right: 0;
   z-index: 1000;     
+  transition: box-shadow .25s ease;
 }
+.main-header.scrolled { box-shadow: 0 4px 14px rgba(0,0,0,0.08); }
 
 .header-inner {
   max-width: 1100px;
@@ -644,9 +656,11 @@ body { font-family: "Times New Roman", serif; }
 .logo-img { height: 50px; }
 .main-nav ul {
   list-style: none;
-  display: flex;
   gap: 20px;
 }
+/* Ensure correct behavior for nav visibility */
+@media (min-width: 769px) { .main-nav ul { display:flex; } }
+@media (max-width: 768px) { .main-nav ul { display:none; } .main-nav.active ul { display:flex; flex-direction:column; } }
 .main-nav a {
   font-size: 14px; /* reduced */
   text-decoration: none;
@@ -663,6 +677,19 @@ body { font-family: "Times New Roman", serif; }
   margin: auto;
   width: 100%;
 }
+/* Hide active underline in mobile nav */
+@media (max-width: 768px) { .main-nav a.active::after { display: none; } }
+
+/* Mobile Navigation (delegate behavior to global styles.css) */
+@media (max-width: 768px) {
+  .top-bar { padding:4px 0; }
+  .top-bar-inner { font-size:12px; }
+  .header-inner { padding:8px 12px; }
+  .logo-img { height:50px; }
+}
+
+/* Reserve space below fixed headers using variable set by script.js */
+body.has-fixed-headers { padding-top: var(--fixed-headers-height, 0px); }
 
 
 .real-pr {
@@ -761,6 +788,13 @@ body { font-family: "Times New Roman", serif; }
   height: 500px;
   border-radius: 6px;
 }
+/* Hide desktop side image and show inline one on small screens */
+/* Mobile inline hero images */
+.mobile-inline-hero { display:none; width:100%; border-radius:10px; margin:12px 0 14px; }
+@media (max-width: 768px) {
+  .real-pr-right, .real-pr-right1 { display:none !important; }
+  .mobile-inline-hero { display:block; }
+}
 .real-pr-right1 img {
   display: block;
   max-width: 100%;
@@ -834,6 +868,16 @@ h2 {
   text-align: left;
   font-weight: normal;
   font-family: 'Times New Roman', Times, serif;
+}
+
+/* Mobile layout adjustments for Residency Planning */
+@media (max-width: 768px) {
+  .residency-planning .container { width: 90%; }
+  .residency-planning h1 { text-align: center; margin-bottom: 22px; }
+  .residency-items { flex-direction: column; gap: 28px; }
+  .residency-item { text-align: left; }
+  .residency-item h2 { text-align: left; font-size: 1.25rem; }
+  .residency-item ul li { line-height: 1.3; }
 }
 
 hr {
